--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="content">
-        <h1 id="title">I Love You! 💕</h1>
+        <h1 id="title">I Love You!</h1>
         <div class="message">
             <p>My dearest [Girlfriend's Name], you are the light of my life, the beat in my heart, and the reason I smile every day. I love you more than words can say. Happy Valentine's Day or whenever you're reading this! 💖</p>
         </div>
